--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.1.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@notionhq/client": "^2.2.3",
     "@prisma/client": "^4.12.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.11",
     "@types/yaireo__tagify": "^4.17.0",
     "@yaireo/tagify": "^4.17.8",
@@ -31,11 +33,14 @@
     "next-auth": "^4.22.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
-    "react-form-hook": "^0.0.1",
+    "react-hook-form": "^7.43.9",
     "react-modal": "^3.16.1",
+    "server-only": "^0.0.1",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react-modal": "^3.13.1",
