--- a/package.json
+++ b/package.json
@@ -15,34 +15,43 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.14",
     "@hookform/resolvers": "^3.1.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@notionhq/client": "^2.2.3",
     "@prisma/client": "^4.12.0",
+    "@stripe/stripe-js": "^1.52.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.11",
     "@types/yaireo__tagify": "^4.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "@yaireo/tagify": "^4.17.8",
     "autoprefixer": "10.4.14",
-    "eslint": "8.38.0",
+    "dayjs": "^1.11.7",
+    "eslint": "^8.40.0",
     "eslint-config-next": "13.3.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "ics": "^3.1.0",
-    "next": "13.3.0",
+    "next": "^13.4.1",
     "next-auth": "^4.22.0",
     "postcss": "8.4.21",
+    "randomstring": "^1.2.3",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-modal": "^3.16.1",
     "server-only": "^0.0.1",
+    "stripe": "^12.4.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/randomstring": "^1.1.8",
     "@types/react-modal": "^3.13.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
