Feat: First Alpha

--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,7 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY_LIVE=YOUR_STRIPE_LIVE_PUBLISHABLE_KEY
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY_TEST=YOUR_STRIPE_TEST_PUBLISHABLE_KEY
 STRIPE_SECRET_KEY_LIVE=YOUR_STRIPE_LIVE_SECRET_KEY
 STRIPE_SECRET_KEY_TEST=YOUR_STRIPE_TEST_SECRET_KEY
+NEXT_PUBLIC_MONTHLY_LINE_PRICE_FREE=YOUR_STRIPE_PRICE_ID_FOR_MONTHLY_FREE
+NEXT_PUBLIC_MONTHLY_LINE_PRICE_PREMIUM=YOUR_STRIPE_PRICE_ID_FOR_MONTHLY_PREMIUM
+NEXT_PUBLIC_YEARLY_LINE_PRICE_FREE=YOUR_STRIPE_PRICE_ID_FOR_YEARLY_FREE
+NEXT_PUBLIC_YEARLY_LINE_PRICE_PREMIUM=YOUR_STRIPE_PRICE_ID_FOR_YEARLY_PREMIUM
