--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@yaireo/tagify": "^4.17.8",
     "autoprefixer": "10.4.14",
     "dayjs": "^1.11.7",
+    "encoding": "^0.1.13",
     "eslint": "^8.40.0",
     "eslint-config-next": "13.3.0",
     "eslint-import-resolver-typescript": "^3.5.5",
